<resources>
    <string name="app_name">Login-SignUp</string>
    <string name="remember_me">Remember me</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="log_in">Log In</string>
    <string name="or">OR</string>
    <string name="welcome_back">Welcome back...</string>
    <string name="demoName">APP NAME</string>
    <string name="sign_in">sign in</string>
    <string name="if_you_haven_t_any_account">if you haven\'t any account</string>
    <string name="sign_up">Sign Up</string>
    <string name="contact_number">Contact number</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
</resources>